even better number handling